polyglot-core/src/test/resources/grammars/positive/test-no-parser.polyglot
Package org.anarres.polyglot.test.noparser;

Tokens
	foo = 'foo' ;

Abstract Syntax Tree

	program = foo ;

