polyglot-core/src/test/resources/grammars/negative/test-parser.polyglot
Package foo;

Abstract Syntax Tree

This is garbage.
